# Tbl

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: CI.yml
Data/: Test1.csv  Test1.txt  Test1.xlsx  Test2.csv  Test2.txt  Test2.xlsx  Test3.csv
Include/: Tbl.hpp
Tests/UnitTests/: CMakeLists.txt  Main.cpp  TestTable.cpp  UnitTest.cpp  UnitTest.h
